src/objects/Scorecard_Answer__c.object
<CustomObject>
    <fields>
        <fullName>CT_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>CT Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Campaign_Result__c</fullName>
        <description>Campaign result from the survey</description>
        <label>Campaign_Result</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Comment__c</fullName>
        <label>Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Confidence_Interval__c</fullName>
        <label>Confidence Interval</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Display_Order__c</fullName>
        <defaultValue>99</defaultValue>
        <inlineHelpText>Display Order on Scorecard Page</inlineHelpText>
        <label>Display Order</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Frequency_Error__c</fullName>
        <label>Frequency Error</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>N_Surveyed__c</fullName>
        <description>How many people responded to the question asked.</description>
        <label>N Surveyed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Next_Step__c</fullName>
        <label>Next Step</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Question_Text__c</fullName>
        <formula>Questions__r.Question_Text__c</formula>
        <label>Question Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Question_Type2__c</fullName>
        <label>Question Type</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Questions__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Questions</label>
        <referenceTo>Questions__c</referenceTo>
        <relationshipLabel>Scorecard Answers</relationshipLabel>
        <relationshipName>Scorecard_Answers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RARE_Campaign__c</fullName>
        <formula>Scorecard__r.RARE_Campaign__r.Name</formula>
        <label>RARE Campaign</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Score__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Scorecard__c</fullName>
        <label>Scorecard</label>
        <referenceTo>Scorecard__c</referenceTo>
        <relationshipLabel>Scorecard Answers</relationshipLabel>
        <relationshipName>Scorecard_Answers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Select_QC_Ids__c</fullName>
        <label>Select QC Ids</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Selected_Choices__c</fullName>
        <label>Selected Choices</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <label>Source</label>
        <picklist>
            <picklistValues>
                <fullName>Pride Scorecard</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>KAP Survey</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ToC_Category__c</fullName>
        <formula>Questions__r.ToC_Category__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ToC Category</label>
        <type>Text</type>
    </fields>
    <label>Scorecard Answer</label>
    <nameField>
        <displayFormat>SCA-{000000}</displayFormat>
        <label>Scorecard Answer Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Scorecard Answers</pluralLabel>
    <recordTypes>
        <fullName>KAP</fullName>
        <active>true</active>
        <description>KAP record type</description>
        <label>KAP</label>
    </recordTypes>
    <recordTypes>
        <fullName>PSC</fullName>
        <active>true</active>
        <description>Pride Scorecord record type</description>
        <label>PSC</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>